--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,10 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  height: inherit;
   max-width: 100%;
   /* padding: 10px;   */
-  width: inherit;
-  height: inherit;
+  width: 100%;
+  height: 100vh;
 }
 
 .App-logo {
@@ -83,7 +82,7 @@
    background-image: url("./img/corkboard.jpg"); 
    background-repeat: repeat-y; 
    background-repeat: repeat-x;  
-   height:inherit;
+   height:100vh;
 }
 
 
