--- a/src/components/Note.css
+++ b/src/components/Note.css
@@ -173,7 +173,8 @@
 }
 
 #pin:after {
-      background-color: #A31;
+      background-color: #A31;  
+      /* eslint-disable-next-line */
       background-image: radial-gradient(25% 25%, circle, hsla(0,0%,100%,.3), hsla(0,0%,0%,.3));
       border-radius: 50%;
       box-shadow: inset 0 0 0 1px hsla(0,0%,0%,.1),
